src/objects/Customers__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Card_Holder_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Photo__c</fullName>
        <label>Customer Photo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <label>Encrypted Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp;&quot; &quot; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Old_Password__c</fullName>
        <label>Old Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Salt__c</fullName>
        <label>Password Salt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reset_Password_Token__c</fullName>
        <label>Reset Password Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>beta_application__c</fullName>
        <label>beta_application</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cim_id__c</fullName>
        <label>cim_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_sign_in_at__c</fullName>
        <label>current_sign_in_at</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_sign_in_ip__c</fullName>
        <label>current_sign_in_ip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jcard_id__c</fullName>
        <label>jcard id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_sign_in_at__c</fullName>
        <label>last_sign_in_at</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_sign_in_ip__c</fullName>
        <label>last_sign_in_ip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sign_in_count__c</fullName>
        <label>sign_in_count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customers</label>
    <nameField>
        <label>Card Holder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>